--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,11 @@
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
 	</head>
 	<body>
-		<div style="padding: 50px">
+		<div style="padding: 1px">
 			<h1 align = "center">Time Turner</h1>
 			<br/>
-			{% block content %}{% endblock %}
+			{% block content %}
+			{% endblock %}
 		<div>
 	</body>
 </html>
