--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
   <div class="search-container">
-    <form action="/action_page.php" method="POST">
+    <form action="" method="POST">
       <input type="text" placeholder="Search.." name="search">
       <button name="search_course" type="submit"><i class="fa fa-search"></i></button>
     </form>
