search bar returns all the shit

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,8 @@
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
   <div class="search-container">
-    <form action="" method="POST">
-      <input type="text" placeholder="Search.." name="search">
+    <form method="POST">
+      <input type="text" placeholder="Search.." name="search_course">
       <button name="search_course" type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
