--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
 </head>
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#contact">Contact</a>
+  <a class="active">Enter your course</a>
   <div class="search-container">
     <form method="POST">
       <input type="text" placeholder="Search.." name="search_course">
@@ -17,20 +15,33 @@
 <div>
   {% if search %} 
     {% for prereq in prereqList %}
-    <button type="button">{{prereq._name}}</button>
+    <button name="prereq" type="button">{{prereq._name}}</button>
     {% endfor %}
   {% endif %}
-</div>
-<div class="grid-container">
-  <div class="grid-item"></div>
-  <div class="grid-item"></div>
-  <div class="grid-item"></div>  
-  <div class="grid-item"></div>
-  <div class="grid-item"></div>
-  <div class="grid-item"></div>  
-  <div class="grid-item"></div>
-  <div class="grid-item"></div>
-  <div class="grid-item"></div>  
-</div>
-
+<table>
+  <tr>
+    <th></th>
+    <th>Trimester 1</th>
+    <th>Trimester 2</th>
+    <th>Trimester 3</th>
+  </tr>
+  <tr>
+    <th>Year 1</th>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+   <tr>
+    <th>Year 2</th>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <th>Year 3</th>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
 {% endblock %}
