--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
 <form method="POST">
   <input type="hidden" name="search_course" value="{{course}}">
   <input type="hidden" name="clicked_table" value="True">
-  <input type="hidden" name="prereqselected" value="{{prereqselected}}" 
+  <input type="hidden" name="prereqselected" value="{{prereqselected}}"> 
   <div class="aligned_content">
   <div>
     {% for prereq in prereqList %}
