UGLY UGLY RESTE

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,8 @@
 </head>
 <div class="topnav">
   <form method="POST">
-    <!--<button name="reset" type="submit">Reset</button>-->
-    <a onclick="form.submit()" name='reset' class="active">Reset</a>
+    <button name="reset" type="submit">Reset</button>
+    <!-- <a onclick="form.submit()" name='reset' class="active">Reset</a> -->
   </form>
   <a class="active">Enter your course</a>
   <div class="search-container">
